fix image overflow

--- a/client/app/views/styles/application.styl
+++ b/client/app/views/styles/application.styl
@@ -159,6 +159,9 @@ body
         background: inherit
         a
             color: link-active-title-color
+        img
+            max-width: 100%;
+            height: auto;
         *
             color: inherit
     .panel-footer
