--- a/client/public/stylesheets/app.css
+++ b/client/public/stylesheets/app.css
@@ -117,6 +117,10 @@ body {
 #panel-links .panel-body a {
   color: #a6d130;
 }
+#panel-links .panel-body img {
+  max-width: 100%;
+  height: auto;
+}
 #panel-links .panel-body * {
   color: inherit;
 }
